# quadratic_bezier_splines

./: CMakeLists.txt  quadratic_bezier_splines.c  readme.md
include/: quadratic_bezier_splines.h
